Actualizar estilos de fondo en JqGridComponent.css y agregar funcionalidad de eliminar registro en jqgrid.js

--- a/client/src/jqGrid/JqGridComponent.css
+++ b/client/src/jqGrid/JqGridComponent.css
@@ -39,7 +39,7 @@
 }
 
 .btn {
-  background-color: #4CAF50; /* Color de fondo */
+  background-color: #5a5858; /* Color de fondo */
   border: none; /* Sin borde */
   color: white; /* Color de texto */
   padding: 15px 32px; /* Espaciado interno */
